<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sofw_blue"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_marginHorizontal="44dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                style="@style/TextBig"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/EditTextName"
                android:hint="@string/username_or_phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                style="@style/EditTextPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/PrimaryButton"
                android:text="@string/sing_in"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SecondaryButton"
                android:layout_marginTop="12dp"
                android:text="@string/new_Acoount"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="14dp"
                style="@style/SecondaryButton"
                android:text="@string/google"
                android:drawableLeft="@drawable/icon_google_sm"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>