<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegiterOrEditTwoActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sofw_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextMd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rang_price"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            style="@style/CardViewListItem"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/price" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/TextMd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:text="a" />

                        <androidx.cardview.widget.CardView
                            style="@style/CardViewListItem"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/price" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <TextView
                        style="@style/TextMd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/address"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        style="@style/CardViewListItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/Style_EditTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="120dp" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        style="@style/PrimaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/new_Acoount" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/buttonBack"
                style="@style/SecondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="8dp"
                android:text="Atras"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>