<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sofw_blue">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activityInfoProfile_ImageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/activityInfoProfile_TextName"
                style="@style/TextMd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="32dp"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/activityInfoProfile_ImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activityInfoProfile_textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/rang_price"
                style="@style/TextSm"
                app:layout_constraintStart_toEndOf="@+id/activityInfoProfile_ImageView"
                app:layout_constraintTop_toBottomOf="@+id/activityInfoProfile_TextName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activityInfoProfile_RecyclerViewProduc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="44dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activityInfoProfile_ImageView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activityInfoProfile_cardViewListProduc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:cardBackgroundColor="@color/sofw_blue"
                style="@style/CardViewListItem"
                layout="@layout/card_list_product"
                app:layout_constraintTop_toBottomOf="@id/activityInfoProfile_RecyclerViewProduc"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activityInfoProfile_cardListProduc_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextBig"
                        android:text="@string/name"/>

                    <ImageView
                        android:id="@+id/activityInfoProfile_cardListProduct_Img"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/nica_artesano"/>

                    <TextView
                        android:id="@+id/activityInfoProfile_cardLisProduct_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextMd"
                        android:text="@string/description"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>